--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <title>Front-end</title>
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
+    <title>Nutrient-front-end</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
